vanilla js cld-product and cld-shoppable-image

--- a/demo/index.html
+++ b/demo/index.html
@@ -6,9 +6,7 @@
 <meta name="viewport" content="width=device-width">
 </head>
 <body>
-
-<cld-shoppable-image>
-</cld-shoppable-image>
+    <div id="shoppable-container"></div>
 
 <script
 	src="../cld-shoppable-image.js"
