Parse <cld-product>s and create DOM from them
Don't fake things anymore!

--- a/demo/index.html
+++ b/demo/index.html
@@ -88,21 +88,23 @@ cld-shoppable-image:has( #product1:hover ) #product1_hotspot {
 <cld-shoppable-image>
 
 <cld-product
+	href="#"
 	thumb="https://assets.thenorthface.com/image/upload/q_auto,f_auto/v1725637817/summit-pro-120-crew"
 	category="Base Layer"
 	name="Summit Pro 120 Crew"
-	x=0.55
-	y=0.35
+	x=55%
+	y=35%
 ></cld-product>
 <cld-product
+	href="#"
 	thumb="https://assets.thenorthface.com/image/upload/q_auto,f_auto/v1725637819/summit-series-goretex-bibs"
 	category="Shell Layer"
 	name="Summit Series Verbier Bibs"
-	x=0.5
-	y=0.75
+	x=50%
+	y=75%
 ></cld-product>
 
-<img class="photo" src="https://assets.thenorthface.com/image/upload/q_auto,f_auto/v1725637803/ss-baselayer-image-t-d-xl" />
+<img class="photo" src="https://assets.thenorthface.com/image/upload/q_auto,f_auto/v1725637803/ss-baselayer-image-t-d-xl" alt="A man sitting at the entrance of an orange tent on a snowy day, either donning or removing his backpack. He is wearing a black base layer on top, and some thick black snowpants." />
 
 </cld-shoppable-image>
 
