Real product hrefs in demo

--- a/demo/index.html
+++ b/demo/index.html
@@ -88,7 +88,7 @@ cld-shoppable-image:has( #product1:hover ) #product1_hotspot {
 <cld-shoppable-image>
 
 <cld-product
-	href="#"
+	href="https://www.thenorthface.com/en-us/womens/collections/summit-series-c324773/womens-summit-series-pro-120-crew-pNF0A880A"
 	thumb="https://assets.thenorthface.com/image/upload/q_auto,f_auto/v1725637817/summit-pro-120-crew"
 	category="Base Layer"
 	name="Summit Pro 120 Crew"
@@ -96,7 +96,7 @@ cld-shoppable-image:has( #product1:hover ) #product1_hotspot {
 	y=35%
 ></cld-product>
 <cld-product
-	href="#"
+	href="https://www.thenorthface.com/en-us/womens/collections/summit-series-c324773/womens-summit-series-verbier-gore-tex-bibs-pNF0A880D"
 	thumb="https://assets.thenorthface.com/image/upload/q_auto,f_auto/v1725637819/summit-series-goretex-bibs"
 	category="Shell Layer"
 	name="Summit Series Verbier Bibs"
